refactor: toList() 메소드 사용으로 코드 간소화